--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
     "node": ">=14.20.1"
   },
   "scripts": {
-    "start": "node start",
+    "start": "node index.js",
     "dev": "nodemon index.js"
   },
   "keywords": [],
